Added gradient boosting.

--- a/AMG_Models_MS4_DKM.ipynb
+++ b/AMG_Models_MS4_DKM.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 968,
+   "execution_count": 1041,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
     "from sklearn.decomposition import TruncatedSVD as tSVD\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis as QDA\n",
-    "from sklearn.ensemble import AdaBoostClassifier as Boost\n",
+    "from sklearn.ensemble import GradientBoostingClassifier as GBC\n",
     "from sklearn.ensemble import RandomForestClassifier as RFC\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -2305,7 +2305,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1009,
+   "execution_count": 1037,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  score: 0.660  baseline: 0.845   wscore: 0.902   f1: 0.354  | test score 0.353  1-prec 0.899 f1 0.033  profit 312MM\n",
+      "2011  score: 0.759  baseline: 0.887   wscore: 0.905   f1: 0.239  | test score 0.765  1-prec 0.915\n",
+      "2012  score: 0.656  baseline: 0.867   wscore: 0.907   f1: 0.298  | test score 0.638  1-prec 0.894\n",
+      "2013  score: 0.662  baseline: 0.818   wscore: 0.883   f1: 0.390  | test score 0.657  1-prec 0.883\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_model_by_year(lambda: RFC(\n",
+    "        random_state=1729,\n",
+    "        max_depth=5,\n",
+    "        class_weight = 'balanced',\n",
+    "        n_estimators=300\n",
+    "        )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1010,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: try different depths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1049,
    "metadata": {
     "collapsed": false
    },
@@ -2322,23 +2361,7 @@
     }
    ],
    "source": [
-    "eval_model_by_year(lambda: RFC(\n",
-    "        random_state=1729,\n",
-    "        max_depth=5,\n",
-    "        n_estimators=300\n",
-    "        )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1010,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# TODO: try different depths"
+    "eval_model_by_year(lambda: GBC(n_estimators = 10, max_depth = 1, learning_rate = 0.1))"
    ]
   },
   {
@@ -2694,7 +2717,7 @@
    "execution_count": 1024,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2710,6 +2733,29 @@
    ],
    "source": [
     "eval_model_by_year(lambda: QDA(), x = x_expanded_pca, x_test = x_test_expanded_pca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1053,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  score: 0.845  baseline: 0.845   wscore: 0.845   f1: 0.000  | test score 0.152  1-prec 0.848 f1 0.053  profit 851MM\n",
+      "2011  score: 0.887  baseline: 0.887   wscore: 0.887   f1: 0.000  | test score 0.896  1-prec 0.896\n",
+      "2012  score: 0.867  baseline: 0.867   wscore: 0.867   f1: 0.000  | test score 0.863  1-prec 0.863\n",
+      "2013  score: 0.818  baseline: 0.818   wscore: 0.818   f1: 0.000  | test score 0.825  1-prec 0.825\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_model_by_year(lambda: GBC(n_estimators = 10, max_depth = 1, learning_rate = 0.1),\n",
+    "                  x = x_expanded_pca, x_test = x_test_expanded_pca)"
    ]
   },
   {
