Removed extra profit stuff.

--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
        "'./intermediate_files/processed_data_train.json'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
        "Name: issue_date, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -526,7 +526,7 @@
        "verif_status                       NaN  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -582,7 +582,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,19 +593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data_filtered_x = data_filtered.drop('loan_status', 1)\n",
+    "data_filtered_x = data_filtered.drop('loan_status', axis = 1)\n",
     "data_filtered_y = data_filtered['loan_status']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -613,12 +613,13 @@
    "source": [
     "# copy unstandardized columns for later profit calculation\n",
     "profit_data = data_filtered_x[['installment', 'loan_amount', 'recoveries']]\n",
-    "recoveries_avg = profit_data.recoveries.sum() / float(np.count_nonzero(profit_data.recoveries))"
+    "recoveries_avg = profit_data.recoveries.sum() / float(np.count_nonzero(profit_data.recoveries))\n",
+    "data_filtered_x = data_filtered_x.drop('recoveries', axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -628,7 +629,7 @@
     "    x_expanded = pd.DataFrame()\n",
     "    for colname in x_orig.columns:\n",
     "        if colname in ('description', 'verif_status', 'loan_subgrade', 'id', 'interest_rate'\n",
-    "                       'index', 'recoveries', 'issue_date', 'earliest_credit'):\n",
+    "                       'index', 'issue_date', 'earliest_credit'):\n",
     "            continue\n",
     "        print colname, x_orig[colname].dtype\n",
     "        if x_orig[colname].dtype == 'object':\n",
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -1523,7 +1524,7 @@
        "[149 rows x 8 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,9 +1535,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1556,7 +1558,7 @@
        "      dtype='object', length=149)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1606,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1619,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -1632,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -1651,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1679,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -1696,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1709,7 +1711,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1732,7 +1734,7 @@
        "19719"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1764,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1778,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -1801,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -1815,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -1835,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -1843,53 +1845,6 @@
    "source": [
     "desc_matrix_pca = desc_matrix_filtered_pca.iloc[train_flags, :]\n",
     "desc_matrix_test_pca = desc_matrix_filtered_pca.iloc[~train_flags, :]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Predict recoveries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# predictors = pd.concat((profit_data.loan_amount, profit_data.installment), \n",
-    "#                        axis = 1)\n",
-    "# predictors_bad = predictors[data_filtered_y == True]\n",
-    "# response_bad = profit_data.recoveries[data_filtered_y == True]\n",
-    "\n",
-    "# train_flags = np.random.random(predictors_bad.shape[0]) < 0.7\n",
-    "# local_x_train = predictors_bad.iloc[train_flags, :]\n",
-    "# local_y_train = response_bad[train_flags]\n",
-    "# local_x_test = predictors_bad.iloc[~train_flags, :]\n",
-    "# local_y_test = response_bad[~train_flags]\n",
-    "\n",
-    "# model = Lin_Reg().fit(local_x_train, local_y_train)\n",
-    "# print \"R-squared on test set =\", model.score(local_x_test, local_y_test)\n",
-    "\n",
-    "# # predict on bad loans\n",
-    "# pred_recover = model.predict(local_x_test)\n",
-    "# pred_recover_sum = pred_recover.sum()\n",
-    "# actual_sum = local_y_test.sum()\n",
-    "\n",
-    "# print \"Difference between predicted and actual recoveries:\"\n",
-    "# diff = np.abs(pred_recover_sum - actual_sum)\n",
-    "# print \"\\tAbsolute =\", round(diff)\n",
-    "# print \"\\tRelative =\", round(diff / float(actual_sum), 4)\n",
-    "\n",
-    "# print \"Average predicted vs. actual recoveries:\"\n",
-    "# print \"\\tPredicted =\", round(pred_recover_sum / float(response_bad.shape[0]))\n",
-    "# print \"\\tActual =\", round(actual_sum / float(response_bad.shape[0]))\n",
-    "\n",
-    "# # predict on all loans\n",
-    "# predicted_recoveries = model.predict(predictors)"
    ]
   }
  ],
