--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -80,9 +80,21 @@
    },
    "outputs": [],
    "source": [
-    "def eval_model_all_years(model_factory, columns = None, poly_degree = None, prob_threshold = 0.5, \n",
-    "                         x = x_expanded, x_test = x_test_expanded, y = y, y_test = y_test,\n",
-    "                        years = years, years_test = years_test, profit_data_test = profit_data_test):\n",
+    "# Use a dictionary to store the model-by-model results for eventual summary visualization\n",
+    "\n",
+    "model_performance = {}\n",
+    "\n",
+    "def eval_model_all_years(model_factory, \n",
+    "                         columns = None, \n",
+    "                         poly_degree = None, \n",
+    "                         prob_threshold = 0.5, \n",
+    "                         x = x_expanded, \n",
+    "                         x_test = x_test_expanded, \n",
+    "                         y = y, \n",
+    "                         y_test = y_test,\n",
+    "                         years = years, \n",
+    "                         years_test = years_test, \n",
+    "                         profit_data_test = profit_data_test):\n",
     "    k = 5\n",
     "    np.random.seed(1729)\n",
     "    \n",
@@ -126,6 +138,9 @@
     "            cm_accum += confusion_matrix(y.iloc[test_indexes], y_hat[test_indexes])\n",
     "            f1_accum += f1_score(y.iloc[test_indexes], y_hat[test_indexes], pos_label = 1) / k\n",
     "        \n",
+    "            if model_name is None:\n",
+    "                model_name = type(model).__name__\n",
+    "\n",
     "        # but also test against the x_test\n",
     "        test_y_hat = (model.predict_proba(x_local_test)[:,0] > prob_threshold)\n",
     "        test_score = (y_test == test_y_hat).mean()\n",
@@ -134,13 +149,22 @@
     "\n",
     "        # expected profit\n",
     "        profit_mm = calc_expected_profit(profit_data_test, test_y_hat)\n",
-    "        \n",
-    "        print \"%d  score: %.3f  baseline: %.3f   wscore: %.3f   f1: %.3f  | test score %.3f  1-prec %.3f f1 %.3f  GP %dMM\" \\\n",
-    "        % (0, score, 1-y.mean(), 1-weighted_score, f1_accum, test_score, test_precision, test_f1, profit_mm)\n",
     "\n",
-    "# TODO: Confusion matrix (right now, we're not doing well enough to worry about that)\n",
-    "# TODO: Pretty-print\n",
-    "# TODO: Store results to allow side-by-side"
+    "        print \"all   score: %.3f  baseline: %.3f   1-prec: %.3f   f1: %.3f  | test score %.3f  1-prec %.3f f1 %.3f  GP %dMM\" % (\n",
+    "            score, 1-y.mean(), 1-weighted_score, f1_accum, test_score, test_precision, test_f1, profit_mm)\n",
+    "\n",
+    "        model_performance[model_name] = {\n",
+    "            'score': score,\n",
+    "            'baseline' : 1-y.mean(),\n",
+    "            'prec' : 1-weighted_score,\n",
+    "            'f1': f1_accum,\n",
+    "            'test_score': test_score,\n",
+    "            'test_prec': test_precision,\n",
+    "            'test_f1': test_f1,\n",
+    "            'test_profit': profit_mm,\n",
+    "        }\n",
+    "\n",
+    "# TODO: Confusion matrix (right now, we're not doing well enough to worry about that)"
    ]
   },
   {
@@ -151,11 +175,21 @@
    },
    "outputs": [],
    "source": [
-    "def eval_model_by_year(model_factory, columns = None, prob_threshold = 0.5,\n",
-    "                        x = x_expanded, x_test = x_test_expanded, y = y, y_test = y_test,\n",
-    "                        years = years, years_test = years_test, profit_data_test = profit_data_test):\n",
-    "    eval_model_all_years(model_factory, columns, None, prob_threshold, x, x_test, y, y_test, years, years_test,\n",
-    "                        profit_data_test)\n",
+    "def eval_model_by_year(model_factory, \n",
+    "                       columns = None, \n",
+    "                       prob_threshold = 0.5,\n",
+    "                       x = x_expanded, \n",
+    "                       x_test = x_test_expanded, \n",
+    "                       y = y, \n",
+    "                       y_test = y_test,\n",
+    "                       years = years, \n",
+    "                       years_test = years_test,\n",
+    "                       profit_data_test = profit_data_test,\n",
+    "                       model_name = None):\n",
+    "    eval_model_all_years(model_factory, columns, None, prob_threshold, \n",
+    "                         x, x_test, y, y_test, years, years_test,\n",
+    "                         profit_data_test, \n",
+    "                         model_name = model_name)\n",
     "    k = 5\n",
     "    np.random.seed(1729)\n",
     "    \n",
@@ -251,9 +285,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [amg1]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [amg1]"
   },
   "language_info": {
    "codemirror_mode": {
