Add comments to the expand method

--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -619,17 +619,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Certain columns in the raw data should not be in our model\n",
+    "columns_not_to_expand = [\n",
+    "    'description',     # free-text, so don't one-hot encode (NLP is separate)\n",
+    "    'verif_status',    # not sure why this is here...\n",
+    "    'loan_subgrade',   # tainted predictor\n",
+    "    'id',              # unique to each row\n",
+    "    'interest_rate',   # tainted predictor\n",
+    "    'index',           # unique to each row\n",
+    "    'issue_date',      # not useful in future, using economic indicators instead\n",
+    "    'earliest_credit', # has been converted to months_since_earliest_credit\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Given an input matrix X and the equivalent matrix X from the training set,\n",
+    "#\n",
+    "# (1) impute missing values (as \"MISSING\" for categorical, since the fact that \n",
+    "# the value is missing may itself be significant; and using the median value\n",
+    "# for continuous predictors)\n",
+    "#\n",
+    "# (2) expand categorical predictors into a set of one-hot-encoded columns \n",
+    "# (using 0 and 1, and limiting ourselves to the 50 most common values in the\n",
+    "# training set)\n",
+    "#\n",
+    "# (3) standardize continuous predictors using the mean and stdev of the\n",
+    "# training set\n",
+    "\n",
     "def expand_x(x, x_orig):\n",
     "    x_expanded = pd.DataFrame()\n",
     "    for colname in x_orig.columns:\n",
-    "        if colname in ('description', 'verif_status', 'loan_subgrade', 'id', 'interest_rate'\n",
-    "                       'index', 'issue_date', 'earliest_credit'):\n",
+    "        if colname in columns_not_to_expand:\n",
     "            continue\n",
     "        print colname, x_orig[colname].dtype\n",
     "        if x_orig[colname].dtype == 'object':\n",
@@ -1851,9 +1884,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [amg1]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [amg1]"
   },
   "language_info": {
    "codemirror_mode": {
