--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -74,14 +74,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def ROC_plot(model, X, Y, model_name):\n",
+    "    # Plot the ROC curve for the given model\n",
+    "    roc_data = []\n",
+    "    for p in np.arange(0, 1, 0.01):\n",
+    "        yhat = model.predict_proba(X)[:,0] <= p\n",
+    "        false_positive_rate = ((yhat == 1) & (Y == 0)).sum() * 1.0 / ((Y == 0).sum())\n",
+    "        true_positive_rate = ((yhat == 1) & (Y == 1)).sum() * 1.0 / ((Y == 1).sum())\n",
+    "        roc_data.append((false_positive_rate, true_positive_rate))\n",
+    "        # mark the key thresholds that we might use\n",
+    "        if p in (0.5, 0.6, 0.85):\n",
+    "            plt.scatter(false_positive_rate, true_positive_rate)  \n",
+    "\n",
+    "    plt.plot([roc[0] for roc in roc_data],\n",
+    "             [roc[1] for roc in roc_data],\n",
+    "            )\n",
+    "    plt.xlim(-.01, 1.0)\n",
+    "    plt.ylim(0, 1.01)\n",
+    "    plt.title(\"ROC Curve for \" + model_name)\n",
+    "    plt.xlabel(\"False Positive Rate\")\n",
+    "    plt.ylabel(\"True Positive Rate\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_expanded' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-81015d3a9fe3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                          \u001b[0mpoly_degree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                          \u001b[0mprob_threshold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                          \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m                          \u001b[0mx_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_test_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                          \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x_expanded' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Use a dictionary to store the model-by-model results for eventual summary visualization\n",
-    "\n",
     "model_performance = {}\n",
     "\n",
     "def eval_model_all_years(model_factory, \n",
@@ -94,7 +135,8 @@
     "                         y_test = y_test,\n",
     "                         years = years, \n",
     "                         years_test = years_test, \n",
-    "                         profit_data_test = profit_data_test):\n",
+    "                         profit_data_test = profit_data_test,\n",
+    "                         model_name = None):\n",
     "    k = 5\n",
     "    np.random.seed(1729)\n",
     "    \n",
@@ -110,61 +152,55 @@
     "        x_local = pd.DataFrame(poly_xform.fit_transform(x_local))\n",
     "        x_local_test = pd.DataFrame(poly_xform.fit_transform(x_local_test))\n",
     "        \n",
-    "    if True: # for yr in [2011, 2012, 2013]: # set(years.values):\n",
-    "        indexes = range(len(years))\n",
-    "        np.random.shuffle(indexes)\n",
+    "    indexes = range(len(years))\n",
+    "    np.random.shuffle(indexes)\n",
     "\n",
-    "        cm_accum = np.zeros((2, 2))\n",
-    "        f1_accum = 0\n",
-    "        score = 0\n",
-    "        weighted_score = 0\n",
+    "    cm_accum = np.zeros((2, 2))\n",
+    "    f1_accum = 0\n",
+    "    score = 0\n",
+    "    weighted_score = 0\n",
     "\n",
-    "        # k-fold cross-validation\n",
-    "        for i in range(k):\n",
-    "            train_indexes = list(indexes[0:len(indexes)*i/k]) + list(indexes[len(indexes)*(i+1)/k:])\n",
-    "            test_indexes = indexes[len(indexes)*i/k:len(indexes)*(i+1)/k]\n",
-    "        \n",
-    "            #print \"TRAIN \", train_indexes\n",
-    "            #print 'TEST', test_indexes\n",
-    "            #print \"Y\", y.iloc[test_indexes]\n",
-    "            \n",
-    "            # model = model_factory().fit(x_expanded[years==yr], y[years==yr])\n",
-    "            # score = model.score(x_expanded[years==yr], y[years==yr]) / k\n",
-    "            model = model_factory().fit(x_local.iloc[train_indexes,:], y.iloc[train_indexes])\n",
-    "            y_hat = model.predict(x_local)\n",
-    "            score += model.score(x_local.iloc[test_indexes], y.iloc[test_indexes]) / k\n",
-    "            y_hat_weighted = (model.predict_proba(x_local)[:,0] > prob_threshold)[test_indexes]\n",
-    "            weighted_score += (y.iloc[test_indexes][y_hat_weighted]).mean() / k\n",
-    "            cm_accum += confusion_matrix(y.iloc[test_indexes], y_hat[test_indexes])\n",
-    "            f1_accum += f1_score(y.iloc[test_indexes], y_hat[test_indexes], pos_label = 1) / k\n",
-    "        \n",
-    "            if model_name is None:\n",
-    "                model_name = type(model).__name__\n",
+    "    # k-fold cross-validation\n",
+    "    for i in range(k):\n",
+    "        train_indexes = list(indexes[0:len(indexes)*i/k]) + list(indexes[len(indexes)*(i+1)/k:])\n",
+    "        test_indexes = indexes[len(indexes)*i/k:len(indexes)*(i+1)/k]\n",
     "\n",
-    "        # but also test against the x_test\n",
-    "        test_y_hat = (model.predict_proba(x_local_test)[:,0] > prob_threshold)\n",
-    "        test_score = (y_test == test_y_hat).mean()\n",
-    "        test_precision = 1- y_test[test_y_hat].mean()\n",
-    "        test_f1 = f1_score(y_test, test_y_hat, pos_label = 1)\n",
+    "        model = model_factory().fit(x_local.iloc[train_indexes,:], y.iloc[train_indexes])\n",
+    "        y_hat = model.predict(x_local)\n",
+    "        score += model.score(x_local.iloc[test_indexes], y.iloc[test_indexes]) / k\n",
+    "        y_hat_weighted = (model.predict_proba(x_local)[:,0] > prob_threshold)[test_indexes]\n",
+    "        weighted_score += (y.iloc[test_indexes][y_hat_weighted]).mean() / k\n",
+    "        cm_accum += confusion_matrix(y.iloc[test_indexes], y_hat[test_indexes])\n",
+    "        f1_accum += f1_score(y.iloc[test_indexes], y_hat[test_indexes], pos_label = 1) / k\n",
     "\n",
-    "        # expected profit\n",
-    "        profit_mm = calc_expected_profit(profit_data_test, test_y_hat)\n",
+    "        if model_name is None:\n",
+    "            model_name = type(model).__name__\n",
     "\n",
-    "        print \"all   score: %.3f  baseline: %.3f   1-prec: %.3f   f1: %.3f  | test score %.3f  1-prec %.3f f1 %.3f  GP %dMM\" % (\n",
-    "            score, 1-y.mean(), 1-weighted_score, f1_accum, test_score, test_precision, test_f1, profit_mm)\n",
+    "    # but also test against the x_test\n",
+    "    model = model_factory().fit(x_local, y)\n",
+    "    test_y_hat = (model.predict_proba(x_local_test)[:,0] > prob_threshold)\n",
+    "    test_score = (y_test == test_y_hat).mean()\n",
+    "    test_precision = 1- y_test[test_y_hat].mean()\n",
+    "    test_f1 = f1_score(y_test, test_y_hat, pos_label = 1)\n",
     "\n",
-    "        model_performance[model_name] = {\n",
-    "            'score': score,\n",
-    "            'baseline' : 1-y.mean(),\n",
-    "            'prec' : 1-weighted_score,\n",
-    "            'f1': f1_accum,\n",
-    "            'test_score': test_score,\n",
-    "            'test_prec': test_precision,\n",
-    "            'test_f1': test_f1,\n",
-    "            'test_profit': profit_mm,\n",
-    "        }\n",
+    "    # expected profit\n",
+    "    profit_mm = calc_expected_profit(profit_data_test, test_y_hat)\n",
     "\n",
-    "# TODO: Confusion matrix (right now, we're not doing well enough to worry about that)"
+    "    ROC_plot(model, x_local_test, y_test, model_name)\n",
+    "\n",
+    "    print \"all   score: %.3f  baseline: %.3f   1-prec: %.3f   f1: %.3f  | test score %.3f  1-prec %.3f f1 %.3f  GP %dMM\" % (\n",
+    "        score, 1-y.mean(), 1-weighted_score, f1_accum, test_score, test_precision, test_f1, profit_mm)\n",
+    "\n",
+    "    model_performance[model_name] = {\n",
+    "        'score': score,\n",
+    "        'baseline' : 1-y.mean(),\n",
+    "        'prec' : 1-weighted_score,\n",
+    "        'f1': f1_accum,\n",
+    "        'test_score': test_score,\n",
+    "        'test_prec': test_precision,\n",
+    "        'test_f1': test_f1,\n",
+    "        'test_profit': profit_mm,\n",
+    "    }"
    ]
   },
   {
