--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -83,6 +83,9 @@
     "def ROC_plot(model, X, Y, model_name):\n",
     "    # Plot the ROC curve for the given model\n",
     "    roc_data = []\n",
+    "    prev_false_positive = 0\n",
+    "    prev_true_positive = 0\n",
+    "    auc = 0  # rough integral\n",
     "    for p in np.arange(0, 1, 0.01):\n",
     "        yhat = model.predict_proba(X)[:,0] <= p\n",
     "        false_positive_rate = ((yhat == 1) & (Y == 0)).sum() * 1.0 / ((Y == 0).sum())\n",
@@ -91,6 +94,10 @@
     "        # mark the key thresholds that we might use\n",
     "        if p in (0.5, 0.6, 0.85):\n",
     "            plt.scatter(false_positive_rate, true_positive_rate)  \n",
+    "        # Use midpoint rectangle method to approximate AUC\n",
+    "        auc += (true_positive_rate + prev_true_positive) / 2.0 * (false_positive_rate - prev_false_positive)\n",
+    "        prev_false_positive = false_positive_rate\n",
+    "        prev_true_positive = true_positive_rate\n",
     "\n",
     "    plt.plot([roc[0] for roc in roc_data],\n",
     "             [roc[1] for roc in roc_data],\n",
@@ -100,12 +107,17 @@
     "    plt.title(\"ROC Curve for \" + model_name)\n",
     "    plt.xlabel(\"False Positive Rate\")\n",
     "    plt.ylabel(\"True Positive Rate\")\n",
-    "    plt.show()"
+    "    plt.gca().text(0.99, 0.1, \"AUC = %.3f\" % (auc,),\n",
+    "                   ha = 'right', va = 'bottom'\n",
+    "    )\n",
+    "    plt.show()\n",
+    "\n",
+    "    return auc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +129,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-81015d3a9fe3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                          \u001b[0mpoly_degree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                          \u001b[0mprob_threshold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                          \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m                          \u001b[0mx_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_test_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                          \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-2efe246392f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                          \u001b[0mpoly_degree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                          \u001b[0mprob_threshold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                          \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m                          \u001b[0mx_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_test_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                          \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'x_expanded' is not defined"
      ]
     }
@@ -186,7 +198,7 @@
     "    # expected profit\n",
     "    profit_mm = calc_expected_profit(profit_data_test, test_y_hat)\n",
     "\n",
-    "    ROC_plot(model, x_local_test, y_test, model_name)\n",
+    "    area_under_curve = ROC_plot(model, x_local_test, y_test, model_name)\n",
     "\n",
     "    print \"all   score: %.3f  baseline: %.3f   1-prec: %.3f   f1: %.3f  | test score %.3f  1-prec %.3f f1 %.3f  GP %dMM\" % (\n",
     "        score, 1-y.mean(), 1-weighted_score, f1_accum, test_score, test_precision, test_f1, profit_mm)\n",
@@ -200,6 +212,7 @@
     "        'test_prec': test_precision,\n",
     "        'test_f1': test_f1,\n",
     "        'test_profit': profit_mm,\n",
+    "        'auc': area_under_curve,\n",
     "    }"
    ]
   },
