Added try/catch to match the .py file

--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -1864,8 +1864,11 @@
     }
    ],
    "source": [
-    "print \"PCA: first and last columns where % variance explained >= 85:\", \\\n",
-    "            np.where(pca_cum_var_expl >= 85)[0][[0, -1]]"
+    "try:\n",
+    "    print \"PCA: first and last columns where % variance explained >= 85:\", \\\n",
+    "                np.where(pca_cum_var_expl >= 85)[0][[0, -1]]\n",
+    "catch:\n",
+    "    print \"Exception!\""
    ]
   },
   {
