A little cleanup in data_loading

--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -4,43 +4,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Loading"
+    "# Data Loading\n",
+    "David Modjeska and Andrew Greene"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook isolates the code we use to load the data and do some last-minute pre-processing on it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Deal with our necessary importds\n",
+    "\n",
+    "import datetime\n",
     "import itertools as it\n",
     "import numpy as np\n",
     "import os.path as op\n",
     "import pandas as pd\n",
     "import scipy as sp\n",
     "import sklearn.preprocessing as Preprocessing\n",
-    "import datetime\n",
     "\n",
     "from itertools import combinations\n",
+    "from scipy.io import mmread\n",
     "from sklearn.decomposition import TruncatedSVD as tSVD\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from scipy.io import mmread\n",
     "\n",
     "from IPython.display import display, HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "### specify processed data files to generate - full/partial, partial %, and train/test\n",
+    "### Specify processed data files to generate - full/partial, partial %, and train/test\n",
     "### Note: this cell is the same in both notebooks\n",
     "\n",
     "# load and clean full dataset?\n",
@@ -76,29 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'./intermediate_files/processed_data_train.json'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "processed_data_train_file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -130,12 +118,19 @@
     }
    ],
    "source": [
-    "print len(data)"
+    "print len(data) # Confirm that the number looks reasonable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to do a little filtering here. As discussed in our writeup, we will limit ourselves to 36-month loans issued in the years 2011, 2012, and 2013"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -171,22 +166,38 @@
        "Name: issue_date, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Make sure we have a reasonable distribution of issue dates\n",
     "pd.to_datetime(data_filtered.issue_date).dt.year.value_counts()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A quick top-level sanity-check of the data, using Pandas `describe` method (and transposing it so it first on screen better)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\agreene\\AppData\\Local\\Continuum\\Anaconda2\\envs\\amg1\\lib\\site-packages\\numpy\\lib\\function_base.py:3834: RuntimeWarning: Invalid value encountered in percentile\n",
+      "  RuntimeWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -526,19 +537,25 @@
        "verif_status                       NaN  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# del x['verif_status']\n",
     "data_filtered.describe().T"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to make a couple of adjustments to columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -553,52 +570,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([               u'address_state',                u'annual_income',\n",
-       "                                u'cpi',                 u'delinq_2_yrs',\n",
-       "                           u'desc_len',                  u'description',\n",
-       "                                u'dti',              u'earliest_credit',\n",
-       "                      u'employ_length',                 u'employ_title',\n",
-       "                                u'gdp',                   u'home_owner',\n",
-       "                                 u'id',          u'initial_list_status',\n",
-       "                      u'inquiry_6_mos',                  u'installment',\n",
-       "                      u'interest_rate',                          u'ipr',\n",
-       "                         u'issue_date',                  u'loan_amount',\n",
-       "                       u'loan_purpose',                  u'loan_status',\n",
-       "                      u'loan_subgrade',                    u'loan_term',\n",
-       "           u'months_since_last_record',                u'open_accounts',\n",
-       "                         u'recoveries',                   u'revol_util',\n",
-       "                                u'rir',               u'total_accounts',\n",
-       "                           u'unemploy',                 u'verif_status',\n",
-       "       u'months_since_earliest_credit'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_filtered.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Separate the predictors (everything except \"loan status\") and the outcome\n",
     "data_filtered_x = data_filtered.drop('loan_status', axis = 1)\n",
     "data_filtered_y = data_filtered['loan_status']"
    ]
@@ -618,8 +596,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standardize the data. (See the comment below for a detailed explanation of what that means)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -628,7 +613,7 @@
     "# Certain columns in the raw data should not be in our model\n",
     "columns_not_to_expand = [\n",
     "    'description',     # free-text, so don't one-hot encode (NLP is separate)\n",
-    "    'verif_status',    # not sure why this is here...\n",
+    "    'verif_status',    # not sure why this is posing a problem....\n",
     "    'loan_subgrade',   # tainted predictor\n",
     "    'id',              # unique to each row\n",
     "    'interest_rate',   # tainted predictor\n",
@@ -723,6 +708,13 @@
    ],
    "source": [
     "data_filtered_expanded_x = expand_x(data_filtered_x, data_filtered_x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, let's use `describe` to sanity-check what we have"
    ]
   },
   {
@@ -1564,40 +1556,6 @@
    ],
    "source": [
     "data_filtered_expanded_x.describe().T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([             u'address_state__CA',              u'address_state__NY',\n",
-       "                    u'address_state__TX',              u'address_state__FL',\n",
-       "                    u'address_state__IL',              u'address_state__NJ',\n",
-       "                    u'address_state__PA',              u'address_state__GA',\n",
-       "                    u'address_state__VA',              u'address_state__OH',\n",
-       "       ...\n",
-       "                  u'loan_purpose__house', u'loan_purpose__renewable_energy',\n",
-       "                            u'loan_term',       u'months_since_last_record',\n",
-       "                        u'open_accounts',                     u'revol_util',\n",
-       "                                  u'rir',                 u'total_accounts',\n",
-       "                             u'unemploy',   u'months_since_earliest_credit'],\n",
-       "      dtype='object', length=149)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_filtered_expanded_x.columns"
    ]
   },
   {
