Cleaned up writing of ROC images

--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -110,7 +110,7 @@
     "    plt.gca().text(0.99, 0.1, \"AUC = %.3f\" % (auc,),\n",
     "                   ha = 'right', va = 'bottom'\n",
     "    )\n",
-    "    plt.savefig('docs/images/roc_' + model_name + '.png',\n",
+    "    plt.savefig('docs/images/roc_' + model_name.replace('/', '_') + '.png',\n",
     "                bbox_inches='tight'\n",
     "    )\n",
     "    plt.show()\n",
