Explore annual id range

--- a/amg_explore.ipynb
+++ b/amg_explore.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +392,7 @@
        "(252720, 73)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7287,6 +7287,107 @@
    ],
    "source": [
     "Log_Reg().fit(lc_poly, lc_Y.defaulted).score(lc_poly, lc_Y.defaulted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>issue_d</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2008</th>\n",
+       "      <td>1562</td>\n",
+       "      <td>369713</td>\n",
+       "      <td>55742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>4716</td>\n",
+       "      <td>472744</td>\n",
+       "      <td>54734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>11521</td>\n",
+       "      <td>643218</td>\n",
+       "      <td>57245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>19675</td>\n",
+       "      <td>1077501</td>\n",
+       "      <td>296737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>49563</td>\n",
+       "      <td>2837824</td>\n",
+       "      <td>58524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>71232</td>\n",
+       "      <td>10234817</td>\n",
+       "      <td>380041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>68694</td>\n",
+       "      <td>37854157</td>\n",
+       "      <td>57167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>25757</td>\n",
+       "      <td>68604659</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         count       max     min\n",
+       "issue_d                         \n",
+       "2008      1562    369713   55742\n",
+       "2009      4716    472744   54734\n",
+       "2010     11521    643218   57245\n",
+       "2011     19675   1077501  296737\n",
+       "2012     49563   2837824   58524\n",
+       "2013     71232  10234817  380041\n",
+       "2014     68694  37854157   57167\n",
+       "2015     25757  68604659   70000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lc_data.groupby(lc_data.issue_d.dt.year).id.agg({'min': np.min, 'max': np.max, 'count': len})"
    ]
   },
   {
