--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -17,11 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Deal with our necessary importds\n",
     "\n",
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +174,7 @@
        "Name: issue_date, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,11 +193,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davidmodjeska/anaconda/lib/python2.7/site-packages/numpy/lib/function_base.py:3834: RuntimeWarning: Invalid value encountered in percentile\n",
+      "  RuntimeWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -529,7 +545,7 @@
        "verif_status                       NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -562,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -575,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -596,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -617,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -667,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -748,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -761,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -774,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -793,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -821,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -838,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -851,7 +867,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -874,7 +890,7 @@
        "19719"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -906,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -952,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -961,11 +977,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "max variance explained 99.62\n",
       "PCA: first and last columns where % variance explained >= 99: [64 99]\n"
      ]
     }
    ],
    "source": [
+    "print \"max variance explained\", pca_cum_var_expl.max()\n",
     "print \"PCA: first and last columns where % variance explained >= 99:\", \\\n",
     "            np.where(pca_cum_var_expl >= 99)[0][[0, -1]]\n",
     "\n",
@@ -975,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -989,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -998,8 +1016,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max variance explained 84.72\n",
-      "PCA: first and last columns where % variance explained >= 84: [226 499]\n"
+      "max variance explained 85.08\n",
+      "PCA: first and last columns where % variance explained >= 84: [221 499]\n"
      ]
     }
    ],
@@ -1011,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1034,9 +1052,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [amg1]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [amg1]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
