--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,6 +38,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LinearRegression as Lin_Reg\n",
     "from sklearn.linear_model import LogisticRegression as Log_Reg\n",
+    "from sklearn.linear_model import LogisticRegressionCV as Log_Reg_CV\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.neighbors import KNeighborsClassifier as KNN\n",
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +133,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-2efe246392f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                          \u001b[0mpoly_degree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                          \u001b[0mprob_threshold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                          \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m                          \u001b[0mx_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_test_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                          \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-2efe246392f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                          \u001b[0mpoly_degree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                          \u001b[0mprob_threshold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                          \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m                          \u001b[0mx_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_test_expanded\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                          \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'x_expanded' is not defined"
      ]
     }
@@ -173,7 +174,7 @@
     "    cm_accum = np.zeros((2, 2))\n",
     "    f1_accum = 0\n",
     "    score = 0\n",
-    "    weighted_score = 0\n",
+    "    precision = 0\n",
     "\n",
     "    # k-fold cross-validation\n",
     "    for i in range(k):\n",
@@ -184,7 +185,7 @@
     "        y_hat = model.predict(x_local)\n",
     "        score += model.score(x_local.iloc[test_indexes], y.iloc[test_indexes]) / k\n",
     "        y_hat_weighted = (model.predict_proba(x_local)[:,0] > prob_threshold)[test_indexes]\n",
-    "        weighted_score += (y.iloc[test_indexes][y_hat_weighted]).mean() / k\n",
+    "        precision += (y.iloc[test_indexes][y_hat_weighted]).mean() / k\n",
     "        cm_accum += confusion_matrix(y.iloc[test_indexes], y_hat[test_indexes])\n",
     "        f1_accum += f1_score(y.iloc[test_indexes], y_hat[test_indexes], pos_label = 1) / k\n",
     "\n",
@@ -195,7 +196,7 @@
     "    model = model_factory().fit(x_local, y)\n",
     "    test_y_hat = (model.predict_proba(x_local_test)[:,0] > prob_threshold)\n",
     "    test_score = (y_test == test_y_hat).mean()\n",
-    "    test_precision = 1- y_test[test_y_hat].mean()\n",
+    "    test_precision = y_test[test_y_hat].mean()\n",
     "    test_f1 = f1_score(y_test, test_y_hat, pos_label = 1)\n",
     "\n",
     "    # expected profit\n",
@@ -203,13 +204,13 @@
     "\n",
     "    area_under_curve = ROC_plot(model, x_local_test, y_test, model_name)\n",
     "\n",
-    "    print \"all   score: %.3f  baseline: %.3f   1-prec: %.3f   f1: %.3f  | test score %.3f  1-prec %.3f f1 %.3f  GP %dMM\" % (\n",
-    "        score, 1-y.mean(), 1-weighted_score, f1_accum, test_score, test_precision, test_f1, profit_mm)\n",
+    "    print \"all   score: %.3f  baseline: %.3f   prec: %.3f   f1: %.3f  | test score %.3f  prec %.3f f1 %.3f  GP %dMM\" % (\n",
+    "        score, y.mean(), precision, f1_accum, test_score, test_precision, test_f1, profit_mm)\n",
     "\n",
     "    model_performance[model_name] = {\n",
     "        'score': score,\n",
-    "        'baseline' : 1-y.mean(),\n",
-    "        'prec' : 1-weighted_score,\n",
+    "        'baseline' : y.mean(),\n",
+    "        'prec' : precision,\n",
     "        'f1': f1_accum,\n",
     "        'test_score': test_score,\n",
     "        'test_prec': test_precision,\n",
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -238,6 +239,8 @@
     "                       years_test = years_test,\n",
     "                       profit_data_test = profit_data_test,\n",
     "                       model_name = None):\n",
+    "\n",
+    "    # Start with an overview\n",
     "    eval_model_all_years(model_factory, columns, None, prob_threshold, \n",
     "                         x, x_test, y, y_test, years, years_test,\n",
     "                         profit_data_test, \n",
@@ -259,78 +262,28 @@
     "        cm_accum = np.zeros((2, 2))\n",
     "        f1_accum = 0\n",
     "        score = 0\n",
-    "        weighted_score = 0\n",
+    "        precision = 0\n",
     "\n",
     "        # k-fold cross-validation\n",
     "        for i in range(k):\n",
     "            train_indexes = list(indexes[0:len(indexes)*i/k]) + list(indexes[len(indexes)*(i+1)/k:])\n",
     "            test_indexes = indexes[len(indexes)*i/k:len(indexes)*(i+1)/k]\n",
     "        \n",
-    "            #print \"TRAIN \", train_indexes\n",
-    "            #print 'TEST', test_indexes\n",
-    "            #print \"Y\", y.iloc[test_indexes]\n",
-    "            \n",
-    "            # model = model_factory().fit(x_expanded[years==yr], y[years==yr])\n",
-    "            # score = model.score(x_expanded[years==yr], y[years==yr]) / k\n",
     "            model = model_factory().fit(x_local.iloc[train_indexes,:], y.iloc[train_indexes])\n",
     "            y_hat = model.predict(x_local)\n",
     "            score += model.score(x_local.iloc[test_indexes], y.iloc[test_indexes]) / k\n",
     "            y_hat_weighted = (model.predict_proba(x_local)[:,0] > prob_threshold)[test_indexes]\n",
-    "            weighted_score += (y.iloc[test_indexes][y_hat_weighted]).mean() / k\n",
+    "            precision += (y.iloc[test_indexes][y_hat_weighted]).mean() / k\n",
     "            cm_accum += confusion_matrix(y.iloc[test_indexes], y_hat[test_indexes])\n",
     "            f1_accum += f1_score(y.iloc[test_indexes], y_hat[test_indexes], pos_label = 1) / k\n",
     "        \n",
     "        # but also test against the x_test\n",
     "        test_score = model.score(x_local_test[years_test == yr], y_test[years_test == yr])\n",
     "        test_y_hat = (model.predict_proba(x_local_test[years_test == yr])[:,0] > prob_threshold)\n",
-    "        test_precision = 1- y_test[years_test == yr][test_y_hat].mean()\n",
+    "        test_precision = y_test[years_test == yr][test_y_hat].mean()\n",
     "\n",
-    "        print \"%d  score: %.3f  baseline: %.3f   wscore: %.3f   f1: %.3f  | test score %.3f  1-prec %.3f\"  % (\n",
-    "            yr, score, 1-y[years==yr].mean(), 1-weighted_score, f1_accum, test_score, test_precision)\n",
-    "\n",
-    "# TODO: Confusion matrix (right now, we're not doing well enough to worry about that)\n",
-    "# TODO: Pretty-print\n",
-    "# TODO: Store results to allow side-by-side"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def eval_model_with_threshold(model_factory, columns=None):\n",
-    "    k = 5\n",
-    "    np.random.seed(1729)\n",
-    "    if columns is None:\n",
-    "        x_local = x_expanded\n",
-    "    else:\n",
-    "        x_local = x_expanded[columns]\n",
-    "\n",
-    "    if True: # because old indent for loop\n",
-    "        indexes = range(len(y))\n",
-    "        np.random.shuffle(indexes)\n",
-    "\n",
-    "        probs = np.ones_like(y) * -1\n",
-    "\n",
-    "        for i in range(k):\n",
-    "            train_indexes = list(indexes[0:len(indexes)*i/k]) + list(indexes[len(indexes)*(i+1)/k:])\n",
-    "            test_indexes = indexes[len(indexes)*i/k:len(indexes)*(i+1)/k]\n",
-    "        \n",
-    "            model = model_factory().fit(x_local.iloc[train_indexes,:], y.iloc[train_indexes])\n",
-    "            probs_test = (model.predict_proba(x_local)[:,0]) #[test_indexes]\n",
-    "            probs = np.where([ii in test_indexes for ii in range(len(y))],  # slow but the only one I've found that works!\n",
-    "                             probs_test, probs)\n",
-    "            # print i, (probs == -1).sum(), (probs > 0).sum()\n",
-    "            \n",
-    "    thresholds = np.arange(0, 1, 0.05)\n",
-    "    plt.plot(thresholds,\n",
-    "             [1-y[probs > t].mean() for t in thresholds])\n",
-    "    plt.show()\n",
-    "\n",
-    "    return probs"
+    "        print \"%d  score: %.3f  baseline: %.3f   prec: %.3f   f1: %.3f  | test score %.3f  prec %.3f\"  % (\n",
+    "            yr, score, y[years==yr].mean(), precision, f1_accum, test_score, test_precision)"
    ]
   }
  ],
