Fix all-year scoring

--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -195,7 +195,7 @@
     "    # but also test against the x_test\n",
     "    model = model_factory().fit(x_local, y)\n",
     "    test_y_hat = (model.predict_proba(x_local_test)[:,0] > prob_threshold)\n",
-    "    test_score = (y_test == test_y_hat).mean()\n",
+    "    test_score = model.score(x_local_test, y_test)\n",
     "    test_precision = y_test[test_y_hat].mean()\n",
     "    test_f1 = f1_score(y_test, test_y_hat, pos_label = 1)\n",
     "\n",
