Fix bug in AUC numeric integration initialization.

--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -84,11 +84,16 @@
     "def ROC_plot(model, X, Y, model_name):\n",
     "    # Plot the ROC curve for the given model\n",
     "    roc_data = []\n",
-    "    prev_false_positive = 0\n",
-    "    prev_true_positive = 0\n",
+    "    # Note that the values actually start in the upper right and move to the lower left as p increases\n",
+    "    # so we need to initialize these at (1, 1) not at (0, 0) for the numeric intergation\n",
+    "    prev_false_positive = 1\n",
+    "    prev_true_positive = 1\n",
     "    auc = 0  # rough integral\n",
+    "    predicted_prob = model.predict_proba(X)[:,1]\n",
+    "\n",
+    "    # Draw ROC curve and use numeric integration to compute AUC\n",
     "    for p in np.arange(0, 1, 0.01):\n",
-    "        yhat = model.predict_proba(X)[:,0] <= p\n",
+    "        yhat = predicted_prob >= p\n",
     "        false_positive_rate = ((yhat == 1) & (Y == 0)).sum() * 1.0 / ((Y == 0).sum())\n",
     "        true_positive_rate = ((yhat == 1) & (Y == 1)).sum() * 1.0 / ((Y == 1).sum())\n",
     "        roc_data.append((false_positive_rate, true_positive_rate))\n",
@@ -96,7 +101,7 @@
     "        if p in (0.5, 0.6, 0.85):\n",
     "            plt.scatter(false_positive_rate, true_positive_rate)  \n",
     "        # Use midpoint rectangle method to approximate AUC\n",
-    "        auc += (true_positive_rate + prev_true_positive) / 2.0 * (false_positive_rate - prev_false_positive)\n",
+    "        auc += (true_positive_rate + prev_true_positive) / 2.0 * (prev_false_positive - false_positive_rate)\n",
     "        prev_false_positive = false_positive_rate\n",
     "        prev_true_positive = true_positive_rate\n",
     "\n",
