Try some polynomial logistic regression to seek crossterm influence

--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -165,6 +165,10 @@
     "        x_local = x\n",
     "        x_local_test = x_test\n",
     "    else:\n",
+    "        # expand column names for factors\n",
+    "        columns = [c for c in x.columns\n",
+    "                   if (c in columns\n",
+    "                       or c.split('__')[0] in columns)]\n",
     "        x_local = x[columns]\n",
     "        x_local_test = x_test[columns]\n",
     "        \n",
