--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -226,7 +226,9 @@
     "        'test_f1': test_f1,\n",
     "        'test_profit': profit_mm,\n",
     "        'auc': area_under_curve,\n",
-    "    }"
+    "    }\n",
+    "    \n",
+    "    return model"
    ]
   },
   {
@@ -250,7 +252,8 @@
     "                       model_name = None):\n",
     "\n",
     "    # Start with an overview\n",
-    "    eval_model_all_years(model_factory, columns, None, prob_threshold, \n",
+    "    all_years_model = eval_model_all_years(\n",
+    "                         model_factory, columns, None, prob_threshold, \n",
     "                         x, x_test, y, y_test, years, years_test,\n",
     "                         profit_data_test, \n",
     "                         model_name = model_name)\n",
@@ -292,7 +295,9 @@
     "        test_precision = y_test[years_test == yr][test_y_hat].mean()\n",
     "\n",
     "        print \"%d  score: %.3f  baseline: %.3f   prec: %.3f   f1: %.3f  | test score %.3f  prec %.3f\"  % (\n",
-    "            yr, score, y[years==yr].mean(), precision, f1_accum, test_score, test_precision)"
+    "            yr, score, y[years==yr].mean(), precision, f1_accum, test_score, test_precision)\n",
+    "        \n",
+    "    return all_years_model;"
    ]
   }
  ],
