Clean up employment title

--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -594,6 +594,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# fix up empoyment title (which is \"employer name\" more often than not\n",
+    "\n",
+    "def cleanup_emp_title(s):\n",
+    "    s = unicode(s).strip()\n",
+    "    if s == 'nan':\n",
+    "        return ''\n",
+    "    s = s.lower()\n",
+    "    s = s.replace('united states', 'us')\n",
+    "    s = s.replace(' llc', '')\n",
+    "    s = s.replace('.', '')\n",
+    "    s = s.replace(',', '')\n",
+    "    s = s.replace('-', '')\n",
+    "    if s.endswith(' inc'):\n",
+    "        s = s[:-4]\n",
+    "    s = s.replace(' ', '')\n",
+    "    if s == 'self':\n",
+    "        s = 'selfemployed'\n",
+    "    if s == 'usps':\n",
+    "        s = 'uspostalservice'\n",
+    "    if s == 'ups':\n",
+    "        s = 'unitedparcelservice'\n",
+    "    if s == 'usaf':\n",
+    "        s = 'usairforce'\n",
+    "    if s == 'rn':\n",
+    "        s = 'registerednurse'\n",
+    "    if s.endswith('bank'):\n",
+    "        s = s[:-4]\n",
+    "    if s.endswith('corp'):\n",
+    "        s = s[:-4]\n",
+    "    return s\n",
+    "\n",
+    "data_filtered['emp_cleaned'] = data_filtered.employ_title.apply(cleanup_emp_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {
     "collapsed": true
@@ -637,7 +679,7 @@
     "# Certain columns in the raw data should not be in our model\n",
     "columns_not_to_expand = [\n",
     "    'description',        # free-text, so don't one-hot encode (NLP is separate)\n",
-    "    'verif_status',       # not sure why this is posing a problem....\n",
+    "    'employ_title',       # replaced by cleaned-up version\n",
     "    'loan_subgrade',      # tainted predictor\n",
     "    'id',                 # unique to each row\n",
     "    'interest_rate',      # tainted predictor\n",
